# blog

./: .gitignore  Makefile  README.md  about.md  blog.cabal  blog.md  index.html  index.md  site.hs
css/: default.css  gallerie.css
extras/: 2015-05-17-pakos.md  2016-09-15-mala-fatra.md
images/2015-05-09-pruhonice/: meta
images/2015-08-06-slovinsko/: meta
posts/: 2015-05-01-uvodem.md  2015-05-09-pruhonice.md  2015-05-12-ostra-horka-obrany-hady.md  2015-08-06-slovinsko.md  2015-08-07-slovinsko.md
script/: run-gallery.js
templates/: blog.html  default.html  gallery.md  post-info.html  post.html
