name:               blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.6.*
                  , containers >= 0.5.5
                  , time >= 1.4
                  , filepath >= 1.3
  ghc-options:      -threaded
  default-language: Haskell2010
