name:               blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base >= 4.7
                  , hakyll >= 4.8
                  , containers
                  , time
                  , filepath
                  , binary
                  , bytestring
                  , pandoc
                  , unordered-containers
                  , aeson
                  , text
  ghc-options:      -threaded
  default-language: Haskell2010
